Fix spacing above Replies

--- a/assets/css/overrides.scss
+++ b/assets/css/overrides.scss
@@ -161,7 +161,8 @@ section#webmentions {
 
   &>ul {
     padding-left: 0;
-    margin-top: 1rem;
+    margin-top: .2rem;
+    padding-top: 0;
     width: 100%;
   }
   li.comment {
